package com.glqdlt.myhome.persistence.member.entity;

public enum MemberType {
    USER,
    ADMIN
}
