@startuml


package persistence.server.entity{

    class Server{
    seq : Integer
    name : String
    ip : String
    }

}

package persistence.author.entity{
    class Author{
        seq : Integer
        name : String
        regDate : Date
    }
}

package persistence.member.entity{
class Member {
    seq : Integer
    id : String
    password : String
    name : String
    type : MemberType
}

enum MemberType{
   USER,ADMIN
}
}
package persistence.book.entity {
abstract class Book{
    seq : Integer
    title : String
    author : Author
    regDate : Date
    expireDate : Date
    register : Member
    descriptionUrl : String
    tags : List<Tag>
}

class Tag {
    seq : Integer
    value : String
}
Book <|-- ScanBook
Book <|-- RidiBook

class ScanBook{
    fileName : String
    fileHash : String
    path : String
    server : Server
    size : Integer
}

class RidiBook{
    url : String
    ridiUserId : String
}
}

@enduml